--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.21.0",
+    "bcrypt": "^5.0.0",
     "jsonwebtoken": "^8.5.1"
   }
 }
