--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "apollo-boost": "^0.4.9",
+    "apollo-react-hooks": "0.0.1",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "jwt-decode": "^3.1.2",
