--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "apollo-server-express": "^2.21.0",
     "bcrypt": "^5.0.0",
-    "jsonwebtoken": "^8.5.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.17"
   }
 }
