--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "concurrently": "^5.3.0",
     "if-env": "^1.0.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "concurrently": "^5.3.0"
+  },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "cd server && npm start",
