--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "concurrently": "^5.3.0",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "react-bootstrap": "^1.5.0"
   },
   "devDependencies": {},
   "scripts": {
