--- a/client/package.json
+++ b/client/package.json
@@ -5,18 +5,24 @@
   "proxy": "http://localhost:3002",
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
+    "@popperjs/core": "^2.8.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "apollo-boost": "^0.4.9",
     "apollo-react-hooks": "0.0.1",
+    "bootstrap": "^4.6.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
+    "jquery": "^3.5.1",
     "jwt-decode": "^3.1.2",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2",
+    "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -45,7 +51,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
-    "postcss-cli": "^8.3.1",
-    "tailwindcss": "^2.0.3"
+    "postcss-cli": "^8.3.1"
   }
 }
