--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "concurrently": "^5.3.0",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3"
   },
   "devDependencies": {},
   "scripts": {
