--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,9 @@
   "proxy": "http://localhost:3002",
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@popperjs/core": "^2.8.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -24,7 +27,9 @@
     "react-dom": "^17.0.1",
     "react-multi-carousel": "^2.6.1",
     "react-router-dom": "^5.2.0",
+    "react-script": "^2.0.5",
     "react-scripts": "^4.0.2",
+    "start": "^5.1.0",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
