--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,24 +1,34 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Dev Learn",
+  "name": "Dev Learn",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "./icons/fox.png",
+      "sizes": "16x16",
+      "type": "image/png"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "./icons/fox(1).png",
+      "sizes": "24x24",
+      "type": "image/png"
     },
     {
-      "src": "logo512.png",
+      "src": "./icons/fox(2).png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "32x32"
+    },
+    {
+      "src": "./icons/fox(3).png",
+      "type": "image/png",
+      "sizes": "64x64"
+    },
+    {
+      "src": "./icons/fox(4).png",
+      "type": "image/png",
+      "sizes": "126x128"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
