--- a/client/package.json
+++ b/client/package.json
@@ -30,11 +30,12 @@
     "react-scripts": "^4.0.3",
     "start": "^5.1.0",
     "typescript": "^4.1.5",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "workbox-cli": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": " workbox generateSW && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
